# AI.BrennanTechnologies

./: Git.py  LazyGit.ps1  PullRequests.py  README.md
Copilot Adoption Agent/: .env.example  README.md  pyproject.toml  requirements.txt
Copilot Adoption Agent/app/: config.py  main.py  models.py
Copilot Adoption Agent/app/services/: coach.py  db.py  security.py
Copilot Adoption Agent/app/static/: index.html
Copilot Adoption Agent/scripts/: demo_requests.http
Enterprise Document RAG Assistant/: .env.example  .gitignore  DEMO_SCRIPT.md  README.md  pyproject.toml  requirements.txt
LLM-Observability-Dashboard/: .gitignore  README.md  docker-compose.yml
M365 Copilot Agent Workflow/: .env.example  README.md  pyproject.toml
M365 Copilot Multi-Agent Workflow/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
M365 Copilot Multi-Agent Workflow/app/: config.py  main.py  models.py
M365 Copilot Multi-Agent Workflow/app/agents/: action_agent.py  knowledge_agent.py  router_agent.py
M365 Copilot Multi-Agent Workflow/app/services/: audit.py  integrations.py  orchestrator.py  security.py
M365 Copilot Multi-Agent Workflow/knowledge/: governance.md
M365 Copilot Multi-Agent Workflow/scripts/: demo_requests.http
M365 Copilot Multi-Agent Workflow/workflows/: multi_agent_workflow.json
M365-Governance-Agent/: .env.example  README.md  pyproject.toml
M365-Governance-Agent/app/: config.py  main.py  models.py
M365-Governance-Agent/app/services/: actions.py  db.py  integrations.py  rag.py  security.py
M365-Governance-Agent/knowledge/: governance_policy.md  rbac_controls.md
M365-Governance-Agent/scripts/: demo_requests.http
Ollama.Ollama.AI/: Ollama.ps1  Ollama.py  Ollama_Moderate_Stress.py  Ollama_Simple_Prompt.py  (+2 more)
(+42 files in other folders)
